@@ -1,0 +1,17 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x118
+  RenderBlock {html} at (0,0) size 800x118
+    RenderBody {body} at (8,16) size 784x86
+      RenderBlock {p} at (0,0) size 784x18
+        RenderInline {test} at (0,0) size 299x18 [bgcolor=#00FF00]
+          RenderText {#text} at (0,0) size 299x18
+            text run at (0,0) width 299: "This sentence should have a green background."
+      RenderBlock {p} at (0,34) size 784x18
+        RenderInline {test} at (0,0) size 299x18 [bgcolor=#00FF00]
+          RenderText {#text} at (0,0) size 299x18
+            text run at (0,0) width 299: "This sentence should have a green background."
+      RenderBlock {p} at (0,68) size 784x18
+        RenderInline {test} at (0,0) size 299x18 [bgcolor=#00FF00]
+          RenderText {#text} at (0,0) size 299x18
+            text run at (0,0) width 299: "This sentence should have a green background."
